fixed layout when quick sale buttons overflow, show warning when plu not found

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1758,6 +1758,7 @@ div#taxes-label {
     }
     #tab-navs {
         flex-wrap: nowrap;
+        min-height: 70px;
     }
     .sg, .qs-item button {
         font-size: 12px;
